# hal

./: .gitignore  Makefile  README.md  hal.cabal  package.yaml  stack.yaml
app/: Main.hs
examples/: continuations.scm  core-tests.scm  counter.scm  eval-expr.scm  eval-order.scm  foo.scm  scopes.scm  sort.scm
lang/: base.scm  std.scm
my-monads/: README.md  my-monads.cabal  package.yaml
my-monads/Control/Monad/Cont/: Class.hs
my-monads/Control/Monad/Except/: Class.hs
my-monads/Control/Monad/Parser/: Class.hs
my-monads/Control/Monad/Reader/: Class.hs
my-monads/Control/Monad/State/: Class.hs
my-monads/Control/Monad/Trans/: Class.hs  Cont.hs  Except.hs  Identity.hs  Maybe.hs  Parser.hs  Reader.hs  State.hs
my-monads/Data/: Stream.hs
my-transformers/: README.md  my-transformers.cabal  package.yaml  stack.yaml
my-transformers/Control/Monad/: MyTrans.hs
my-transformers/Control/Monad/MyTrans/: Class.hs  Cont.hs  ContT.hs  Except.hs  ExceptT.hs  IO.hs  IdentityT.hs  MaybeT.hs  Parser.hs  ParserT.hs  Reader.hs  ReaderT.hs  State.hs  StateT.hs
my-transformers/My/Control/Monad/: Trans.hs
my-transformers/My/Control/Monad/Trans/: Class.hs  Error.hs  ErrorT.hs  Except.hs  ExceptT.hs  IO.hs  Identity.hs  IdentityT.hs  Maybe.hs  MaybeT.hs  Parser.hs  ParserT.hs  Reader.hs  ReaderT.hs  State.hs  StateT.hs
src/: Datum.hs  Eval.hs  Expand.hs  Grammar.hs  Heap.hs  Lib.hs  ListStream.hs  Number.hs  Parsing.hs  Program.hs  Runtime.hs  Syntax.hs  TreeWalker.hs
src/BaseLib/: Procedure.hs
src/Grammar/: Datum.hs  Program.hs
