name:                my-transformers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/my-transformers#readme
license:             BSD3
license-file:        LICENSE
author:              nasso
maintainer:          example@example.com
copyright:           2021 nasso
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     My.Control.Monad.Trans
  other-modules:
    My.Control.Monad.Trans.Class
    My.Control.Monad.Trans.Error
    My.Control.Monad.Trans.Identity
    My.Control.Monad.Trans.IO
    My.Control.Monad.Trans.Maybe
    My.Control.Monad.Trans.Parser
    My.Control.Monad.Trans.Reader
    My.Control.Monad.Trans.State
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nasso/my-transformers
