name:                my-transformers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/my-transformers#readme
license:             BSD3
license-file:        LICENSE
author:              nasso
maintainer:          example@example.com
copyright:           2021 nasso
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:
    My.Control.Monad.Trans
    My.Control.Monad.Trans.ErrorT
    My.Control.Monad.Trans.IdentityT
    My.Control.Monad.Trans.MaybeT
    My.Control.Monad.Trans.ParserT
    My.Control.Monad.Trans.ReaderT
    My.Control.Monad.Trans.StateT
    My.Control.Monad.Trans.IO
  other-modules:
    My.Control.Monad.Trans.Error
    My.Control.Monad.Trans.Parser
    My.Control.Monad.Trans.Reader
    My.Control.Monad.Trans.State
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nasso/my-transformers
