name:                my-transformers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/my-transformers#readme
license:             BSD3
license-file:        LICENSE
author:              nasso
maintainer:          example@example.com
copyright:           2021 nasso
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:
    Control.Monad.MyTrans
    Control.Monad.MyTrans.ExceptT
    Control.Monad.MyTrans.IdentityT
    Control.Monad.MyTrans.MaybeT
    Control.Monad.MyTrans.ParserT
    Control.Monad.MyTrans.ReaderT
    Control.Monad.MyTrans.StateT
    Control.Monad.MyTrans.IO
  other-modules:
    Control.Monad.MyTrans.Class
    Control.Monad.MyTrans.Except
    Control.Monad.MyTrans.Parser
    Control.Monad.MyTrans.Reader
    Control.Monad.MyTrans.State
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nasso/my-transformers
